# ai_task_manager

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
ai_diagram/: apps.py  models.py  urls.py  views.py
ai_diagram/migrations/: 0001_initial.py
ai_diagram/services/: gantt.py
ai_handler/: apps.py  urls.py  views.py
ai_handler/services/: ai_handler.py
ai_manager/: asgi.py  settings.py  urls.py  wsgi.py
core/: forms.py  urls.py  views.py
staticfiles/css/: styles.css
staticfiles/js/: login.js  registration.js
templates/: add_project.html  base.html  login.html  main.html  show_gantt_chart.html  signup.html
