[tool.poetry]
name = "ai-manager-venv"
version = "0.1.0"
description = ""
authors = ["senss <danek.senses@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
environs = "^11.0.0"
django = "5.0.4"
psycopg2-binary = "^2.9.9"
openai = "^1.16.2"
django-bootstrap4 = "24.1"
bootstrap4 = "^0.1.0"
djangorestframework = "^3.15.1"
matplotlib = "^3.9.0"
plotly = "^5.22.0"
pandas = "^2.2.2"
psutil = "^5.9.8"
requests = "^2.31.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
